# libsolv

./: configure.ac
bindings/: Makefile.am
bindings/tcl/: Makefile.am
